# BirlModuleRobot_for_fuziyang

./: README.md  fifo_send_data_and_receive_feedback.cpp  fifo_send_data_and_receive_feedback.h
third_modular_robot/: README.md
third_modular_robot/birl_modular_robot/: CMakeLists.txt
third_modular_robot/birl_modular_robot/script/: inverse_solution_client.py  positive_solution_client.py
third_modular_robot/birl_modular_robot/src/: inverse_solution_server.cpp  positive_solution_server.cpp
third_modular_robot/birl_modular_robot/srv/: inverse_solution.srv  positive_solution.srv
third_modular_robot/canopen_communication/modular/: modular_G100.py  modular_I100.py  modular_I85.py  modular_T100.py  modular_T85.py  modular_joint.py
third_modular_robot/canopen_communication/scripts/: test.py
third_modular_robot/manual/: manual.doc
third_modular_robot/ui/: package.xml
third_modular_robot/ui/launch/: ui.launch
third_modular_robot/ui/msg/: robot_command.msg  robot_feedback.msg
third_modular_robot/ui/path_point_file/: temp.txt
third_modular_robot/ui/script/: README.md  get_fifo_relative_position_thread.py  get_inverse_solution_thread.py  get_positive_solution_thread.py  gripper_control.py  gripper_control_func.py  main.py  modular_robot_control.py  modular_robot_control_func.py  path_point_recorder.py  path_point_recorder_func.py  path_process.py  receive_relative_position.py  receive_ros_command.py  receive_ros_command_func.py  receive_ros_command_thread.py  robot_choice.py  robot_choice_func.py  robot_feedback.py  robot_feedback_fun.py  zero_point_set.py  (+2 more)
(+10 files in other folders)
